# printf

./: ._ft_printf.h  .gitignore  CMakeLists.txt  Makefile  README.md  create_struct.c  ft_itoa_base.c  ft_printf..c  ft_printf.c  ft_printf.h  go_through_struct.c  groups.c  handle_1_gr.c  handle_2_gr.c  handle_2gr.c  handle_else_gr.c  handle_flag.c  handle_p.c  handle_per.c  handle_size.c  handle_type.c  handle_width.c  length_of_a.c  main2.c  print.c
libft/: Makefile  ft_amount_d.c  ft_itoa.c  ft_putnbr.c  ft_putnbr_fd.c  ft_strjoin.c  ft_strndup.c  libft.h
src/: ft_itoa_base.c
